# RustVid

./: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
.github/workflows/: ci.yml  release.yml
capabilities/: default.json
docs/: operations.md
docs/brainstorms/: 2026-06-11-rust-video-processing-web-app-requirements.md
docs/plans/: 2026-06-11-001-feat-rust-video-processing-web-app-plan.md
docs/solutions/build-errors/: tauri-bundled-ffmpeg-btbn-2026-06-23.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  api.ts  router.ts  style.css
frontend/src/components/: JobList.vue  StatusBadge.vue  UploadForm.vue
frontend/src/views/: HomeView.vue  JobView.vue
icons/: icon.icns
src/: app.rs  config.rs  lib.rs  main.rs
src/commands/: artifacts.rs  jobs.rs  mod.rs  presets.rs  uploads.rs  usage.rs
src/domain/: job.rs  mod.rs  preset.rs  storage.rs  upload.rs
src/http/: assets.rs  jobs.rs  mod.rs  pages.rs  uploads.rs
src/persistence/: sqlite.rs
src/services/: artifact_store.rs  capacity.rs  ffmpeg.rs  ffmpeg_binary.rs  ffmpeg_probe.rs  job_queue.rs  mod.rs  upload_sessions.rs
src/ui/static/: app.js  styles.css
tests/: api_jobs.rs  api_uploads.rs  capacity_cleanup.rs  transcode_worker.rs
tests/fixtures/: README.md
tests/support/: mod.rs
