[package]
name = "rustvid"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustvid"
path = "src/lib.rs"

[[bin]]
name = "rustvid"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = { version = "2", default-features = false, features = ["tls"] }
tar = "0.4"
xz2 = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fs2 = "0.4"
libc = "0.2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"

[dev-dependencies]
tempfile = "3"
